--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,6 +7,9 @@
   <title>Document</title>
 </head>
 <body>
+  <p>es6</p>
+  <p>Alex is here</p>
+  <P>this is another</P>
   <script src="/js/index.js"></script>
 </body>
 </html>
